containers/request-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request
spec:
  selector:
    matchLabels:
      app: request
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: request
    spec:
      containers:
        - name: request
          image: gcr.io/PROJECT_ID/REQUEST_SERVICE_IMAGE:TAG
          ports:
            - containerPort: 8080
