containers/request-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  request
  labelss:
    app: request
    service: request
spec:
  selector:
    app:  request
  ports:
    - port: 8080
