containers/request-service/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: request
spec:
  hosts:
    - "*"
  gateways:
    - mdag-gateway
  http:
    - match:
        - uri:
            exact: /hello
        - uri:
            exact: /request
        route:
          - destination:
              host: request
              port:
                number: 8080
